@@ -1,12 +1,25 @@
 <table border=0>
+<tr>
+<td colspan=4 bgcolor=lightblue><b>2006-12-14</b>
+<tr bgcolor=lightgrey>
+<td>21:01
+<td>osborn
+<td>
+NEWS
+1.9<br>
+examples/dw_invert_bench.c
+1.6<br>
+lib/dw_invert_p.c
+1.6<br>
+<td>Fixed restarting shifts in dw inverter.
+</tr>
+
 <tr bgcolor=lightgreen>
 <td>05:45
 <td><td>
 <td>tag <b>qopqdp0-7-6</b> added
 </tr>
 <tr>
-<td colspan=4 bgcolor=lightblue><b>2006-12-14</b>
-<tr bgcolor=lightgrey>
 <td>05:45
 <td>osborn
 <td>
@@ -28,7 +41,7 @@ Added preconditioner to DW inverter.
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-22</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>00:53
 <td>osborn
 <td>
@@ -39,7 +52,7 @@ lib/asqtad_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-21</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:54
 <td>osborn
 <td>
@@ -71,7 +84,7 @@ lib/invert_cg_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-17</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:32
 <td>osborn
 <td>
@@ -80,7 +93,7 @@ include/Makefile.am
 <td>Added generic_vD.h to Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:26
 <td>osborn
 <td>
@@ -117,7 +130,7 @@ lib/invert_cg_vD_f.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-15</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>17:52
 <td>osborn
 <td>
@@ -149,7 +162,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-10-30</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:02
 <td>osborn
 <td>
@@ -178,7 +191,7 @@ Added gauge loading functions.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-09-26</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:23
 <td>osborn
 <td>
@@ -187,7 +200,7 @@ lib/Makefile.am
 <td>Fix Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:16
 <td>osborn
 <td>
@@ -196,7 +209,7 @@ examples/imp_gauge_force_bench.c
 <td>Changed FF to GF in output.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:12
 <td>osborn
 <td>
@@ -211,7 +224,7 @@ lib/symanzik_1loop_gauge_force_p.c
 <td>Really add files.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:09
 <td>osborn
 <td>
@@ -242,7 +255,7 @@ Added gauge force code.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-06-25</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>13:32
 <td>osborn
 <td>
@@ -294,7 +307,7 @@ Must use QLA &gt;= 1.6.0 now in order to agree with Chroma.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-05-04</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:12
 <td>osborn
 <td>
@@ -303,7 +316,7 @@ examples/test_common.h
 <td>Include qmp.h in examples.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>20:09
 <td>osborn
 <td>
@@ -324,7 +337,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-16</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>03:01
 <td>osborn
 <td>
@@ -345,7 +358,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-14</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>20:21
 <td>osborn
 <td>
@@ -362,7 +375,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-04</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:44
 <td>osborn
 <td>
@@ -375,7 +388,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-03-14</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>19:32
 <td>osborn
 <td>
@@ -386,7 +399,7 @@ configure.ac
 <td>Added CC, ect. to DISTCHECK_CONFIGURE_FLAGS.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:51
 <td>osborn
 <td>
@@ -395,7 +408,7 @@ include/Makefile.am
 <td>Added generic headers to Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:48
 <td>osborn
 <td>
@@ -412,7 +425,7 @@ examples/wilson_invert_bench.c
 <td>Allow selection of style in benchmarks.  Update version.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>00:54
 <td>osborn
 <td>
@@ -477,7 +490,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-09</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:05
 <td>osborn
 <td>
@@ -490,7 +503,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-03</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:23
 <td>osborn
 <td>
@@ -501,7 +514,7 @@ lib/wilson_invert_f.c
 <td>Added missing files.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:21
 <td>osborn
 <td>
@@ -541,7 +554,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-01-13</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>22:12
 <td>osborn
 <td>
@@ -550,7 +563,7 @@ lib/Makefile.am
 <td>Fixed lib Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:55
 <td>osborn
 <td>
@@ -595,7 +608,7 @@ lib/wilsonp.c
 <td>Moved many files around.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:50
 <td>osborn
 <td>
@@ -626,7 +639,7 @@ lib/common.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-29</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:17
 <td>osborn
 <td>
@@ -665,7 +678,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-16</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:47
 <td>osborn
 <td>
@@ -676,7 +689,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-15</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>19:23
 <td>osborn
 <td>
@@ -697,7 +710,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-12</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>06:16
 <td>osborn
 <td>
@@ -708,7 +721,7 @@ lib/wilsonp.c
 <td>Changed Wilson inverter code.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:41
 <td>osborn
 <td>
@@ -745,7 +758,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-08</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>01:03
 <td>osborn
 <td>
@@ -768,7 +781,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-01</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>02:02
 <td>osborn
 <td>
@@ -779,7 +792,7 @@ examples/asqtad_test.c
 <td>Small change in test, reran aotoreconf.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>01:51
 <td>osborn
 <td>
@@ -796,7 +809,7 @@ lib/asqtadp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-29</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:26
 <td>osborn
 <td>
@@ -807,7 +820,7 @@ include/qop.h
 <td>Fixed flop bug.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>22:58
 <td>osborn
 <td>
@@ -816,7 +829,7 @@ examples/asqtad_test.c
 <td>Small change to test program output.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:52
 <td>osborn
 <td>
@@ -831,7 +844,7 @@ lib/asqtadp.c
 <td>Added new style of dslash and optimization options.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:24
 <td>osborn
 <td>
@@ -842,7 +855,7 @@ lib/asqtadp.c
 <td>More changes to test program.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:34
 <td>osborn
 <td>
@@ -851,7 +864,7 @@ examples/asqtad_test.c
 <td>Changes in test program.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>17:36
 <td>osborn
 <td>
@@ -866,7 +879,7 @@ examples/asqtad_test.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-27</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>03:26
 <td>osborn
 <td>
@@ -922,4 +935,4 @@ lib/asqtadp.c
 </tr>
 
 </table>
-<p>This page was created on Thu Dec 14 15:16:16 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
+<p>This page was created on Thu Dec 14 16:16:30 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
