@@ -1,3 +1,8 @@
+2006-12-14 16:01  osborn
+
+	* NEWS, examples/dw_invert_bench.c, lib/dw_invert_p.c: Fixed
+	  restarting shifts in dw inverter.
+
 2006-12-14 00:45  tag qopqdp0-7-6
 
 2006-12-14 00:45  osborn
